Added order-wrapper KrakenOrder.cs and broker.cs which contains some logic for submitting orders with the option to wait until they are closed

--- a/KrakenClientConsole/KrakenClientConsole.csproj
+++ b/KrakenClientConsole/KrakenClientConsole.csproj
@@ -49,8 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Broker.cs" />
+    <Compile Include="Models\CancelOrderResult.cs" />
+    <Compile Include="Models\PlaceOrderResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\RefreshOrderResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
