--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,9 @@ UpgradeLog*.htm
 App_Data/*.mdf
 App_Data/*.ldf
 
+#Configuration file
+App.config
+
 # =========================
 # Windows detritus
 # =========================
