--- a/KrakenClientConsole/packages.config
+++ b/KrakenClientConsole/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="jayrock" version="0.9.16530" targetFramework="net45" />
   <package id="jayrock-json" version="0.9.16530" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
 </packages>
