Handle rate-limiting (1 request/5s) using Jack Leitch's RateGate

--- a/KrakenClient/KrakenClient.csproj
+++ b/KrakenClient/KrakenClient.csproj
@@ -39,6 +39,10 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PennedObjects.RateLimiting, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\PennedObjects.RateLimiting.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
