--- a/KrakenClientConsole/KrakenClientConsole.csproj
+++ b/KrakenClientConsole/KrakenClientConsole.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Helpers\Broker.cs" />
     <Compile Include="Models\CancelOrderResult.cs" />
+    <Compile Include="Models\GetOrdersResult.cs" />
     <Compile Include="Models\PlaceOrderResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
