--- a/.gitignore
+++ b/.gitignore
@@ -95,7 +95,7 @@ publish/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
-#packages/
+packages/
 
 # Windows Azure Build Output
 csx
@@ -131,7 +131,7 @@ App_Data/*.mdf
 App_Data/*.ldf
 
 #Configuration file
-App.config
+app.config
 
 # =========================
 # Windows detritus
@@ -149,3 +149,5 @@ $RECYCLE.BIN/
 
 # Mac crap
 .DS_Store
+
+/.vs
